--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Hello</h2>
+  <div class="container">
+    <button class="button one">
+        <span></span>
+        <span></span>
+    </button>
+    <button class="button two">
+        <span></span>
+        <span></span>
+    </button>
+    <button class="button three">
+        <span></span>
+        <span></span>
+    </button>
+    <button class="button four">
+        <span></span>
+        <span></span>
+    </button>
+    <button class="button five">
+        <span></span>
+        <span></span>
+    </button>
+    <button class="button six">
+        <span></span>
+        <span></span>
+    </button>
+    <button class="button seven">
+        <span></span>
+        <span></span>
+    </button>
+    <button class="button eight">
+        <span></span>
+        <span></span>
+    </button>
+    <button class="button nine">
+        <span></span>
+        <span></span>
+    </button>
+    <button class="button ten">
+        <span></span>
+        <span></span>
+    </button>
+    
+  </div> 
   <script src="index.js"></script>  
 </body>
 </html>
