--- a/index.html
+++ b/index.html
@@ -8,47 +8,25 @@
 </head>
 <body>
   <div class="container">
-    <button class="button one">
-        <span></span>
-        <span></span>
+    <button class="button one 1">
     </button>
-    <button class="button two">
-        <span></span>
-        <span></span>
+    <button class="button two 2">
     </button>
-    <button class="button three">
-        <span></span>
-        <span></span>
+    <button class="button three 3">
     </button>
-    <button class="button four">
-        <span></span>
-        <span></span>
+    <button class="button four 4">
     </button>
-    <button class="button five">
-        <span></span>
-        <span></span>
+    <button class="button five 5">
     </button>
-    <button class="button six">
-        <span></span>
-        <span></span>
+    <button class="button six 6">
     </button>
-    <button class="button seven">
-        <span></span>
-        <span></span>
+    <button class="button seven 7">
     </button>
-    <button class="button eight">
-        <span></span>
-        <span></span>
+    <button class="button eight 8">
     </button>
-    <button class="button nine">
-        <span></span>
-        <span></span>
+    <button class="button  nine 9">
     </button>
-    <button class="button ten">
-        <span></span>
-        <span></span>
-    </button>
-    
+    <button class="button ten 10"></button>    
   </div> 
   <script src="index.js"></script>  
 </body>
