fix: easy way with change size

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <img src="./img/test_bg.jpg" alt="city">
     <button class="button one 1">
     </button>
     <button class="button two 2">
